# pytest-pahrametahrize

./: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  pytest_pahrametahrize.py  tox.ini
.github/workflows/: lint_test.yml
tests/: test_pahrametahrize.py
