[tool.poetry]
name = "pytest-pahrametahrize"
version = "1.0.0"
description = "Parametrize your tests with a Boston accent."
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pytest-pahrametahrize"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"pytest-pahrametahrize" = "pytest_pahrametahrize"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^6.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
bump2version = "^1.0"
flake8 = "^4.0"
flake8-annotations = "^2.7"
flake8-bugbear = "^21.4"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
flake8-import-order = "^0.18"
flake8-tidy-imports = "^4.4"
isort = "^5.9"
pep8-naming = "^0.12"
pre-commit = "^2.14"
pytest-cov = "^3.0"
tox = "^3.24"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
