[tool.poetry]
name = "pytest-pahrametahrize"
version = "1.0.0"
description = "Parametrize your tests with a Boston accent."
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pytest-pahrametahrize"
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"pytest-pahrametahrize" = "pytest_pahrametahrize"

[tool.poetry.dependencies]
python = "^3.8.1"
pytest = ">=6.0"

[tool.poetry.dev-dependencies]
black = "^23.1"
bump2version = "^1.0"
flake8 = "^6.0"
flake8-annotations = "^3.0"
flake8-bugbear = "^23.1"
flake8-docstrings = "^1.7"
flake8-fixme = "^1.1"
isort = "^5.12"
mypy = "^1.0"
pep8-naming = "^0.13"
pre-commit = "^3.0"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
