[tool.poetry]
name = "pytest-pahrametahrize"
version = "1.0.0"
description = "Parametrize your tests with a Boston accent."
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/sco1/"
repository = "https://github.com/sco1/pytest-pahrametahrize"
classifiers = [
    "Development Status :: 6 - Mature",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[tool.poetry.plugins]
[tool.poetry.plugins."pytest11"]
"pytest-pahrametahrize" = "pytest_pahrametahrize"

[tool.poetry.dependencies]
python = "^3.9"
pytest = ">=6.0"

[tool.poetry.dev-dependencies]
black = "^24.10"
bump2version = "^1.0"
flake8 = "^7.1"
flake8-annotations = "^3.0"
isort = "^5.12"
mypy = "^1.0"
pre-commit = "^4.0"
pytest-cov = "^6.0"
pytest-randomly = "^3.12"
ruff = "^0.7"
tox = "^4.4"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
